--- a/index.html
+++ b/index.html
@@ -7,7 +7,23 @@
   </head>
 
   <body>
-    <h1>Hello World!, we are software developers!</h1>
+    <div id="main">
+      <div id="title">
+        <h1>The Chakra Page</h1>
+        <p>Learn how to form jitsu</p>
+      </div>
+      <div id="img-div">
+        <img src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg" id="image" alt="">
+        <figcaption id="img-caption">
+          A simple caption.
+        </figcaption>
+      </div>
+      <div id="tribute-info">
+
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi, quo maiores ab at eos accusamus velit ipsa facilis non dolorem aspernatur mollitia temporibus harum minus hic voluptates distinctio voluptate laudantium.</p>
+        <a href="" target="_blank" id="tribute-link">Read More</a>
+      </div>
+    </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
